# PyRPNApi

./: .flake8  .gitignore  .pylintrc  Jenkinsfile  Procfile  README.md  currencies.json  junit-py310.xml  junit-py37.xml  junit-py38.xml  junit-py39.xml  setup.cfg  tox.ini
.github/workflows/: python-ci.yaml
docs/: conf.py  index.rst  myapp.rst
pyrpnapi/: calc.py  rpn.py
tests/: test_api.py
