[metadata]
name = pyrpnapi
version = 0.1
author = Grzegorz Kotarski
author-email = grzes.kotarski@gmail.com
summary = Python Reverse Polish Notation API Project
description-file = README.md
# home-page = Put GIT repo URL here
requires-dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging


[options]
packages = find:

install_requires =
    fastapi[all]
setup_requires =
    pytest-runner
    wheel
tests_requires =
    pytest

[options.extras_require]
dev =
    fastapi[all]
    pytest
    pylint
    flake8
    radon
    rope
    Sphinx
    wheel
    pre-commit

[options.packages.find]
exclude = tests

[build_sphinx]
project = Python Boilerplate Project
release = 1.0.0
copyright = 2021 zf.com
config-dir = docs

[aliases]
test=pytest
