[metadata]
name = pyrpnapi
version = 1.0
author = Grzegorz Kotarski
author_email = grzes.kotarski@gmail.com
summary = Python Reverse Polish Notation API Project
description_file = README.md
home_page = https://github.com/grzes71/PyRPNApi
requires_dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging


[options]
packages = find:

install_requires =
    fastapi[all]

setup_requires =
    pytest-runner
    wheel
    
tests_requires =
    pytest
    pytest-cov

[options.extras_require]
dev =
    fastapi[all]
    pytest
    pytest-cov
    pylint
    flake8
    radon
    rope
    Sphinx
    wheel
    pre-commit
    tox

[options.packages.find]
exclude = tests

[build_sphinx]
project = Python Reverse Polish Notation API
release = 1.0.0
copyright = 2022 Grzegorz Kotarski
config-dir = docs

[aliases]
test=pytest

[coverage:run]
branch = True
omit = pyrpnapi/rpn.py

[coverage:report]
show_missing = True
skip_covered = True

[tool:pytest]
addopts = --junitxml=junit.xml --cov=pyrpnapi --cov-report xml:coverage.xml tests/